mic off working

--- a/public/index.html
+++ b/public/index.html
@@ -88,35 +88,39 @@
         <div class='call_container'>
             <div class="videos_container">
                 <div id="video_placeholder" class="videos_placeholder">
-                    <img src="./utils/Images/logo.png" alt="">
+                    <img src="./utils/Images/logo.png" alt=""></img>
                 </div>
                 <video class="remote_video display_none" autoplay id="remote_video"></video>
+
                 <div class="local_video_container">
                     <video class="local_video" id="local_video" muted autoplay></video>
                 </div>
 
                 <div class="call_buttons_container display_none" id="call_buttons">
                     <button class="call_button_small" id="mic_button">
-                        <img src="./utils/Images/mic.png" alt="" id="mic_button_image">
+                        <img src="./utils/Images/mic.png" alt="" id="mic_button_image"></img>
                     </button>
                     <button class="call_button_small" id="camera_button">
-                        <img src="./utils/Images/camera.png" alt="" id="mic_button_image">
+                        <img src="./utils/Images/camera.png" alt="" id="mic_button_image"></img>
                     </button>
                     <button class="call_button_large" id="hang_up_button">
-                        <img src="./utils/Images/hangUp.png" alt="" id="mic_button_image">
+                        <img src="./utils/Images/hangUp.png" alt="" id="mic_button_image"></img>
                     </button>
                     <button class="call_button_small" id="screen_sharing_button">
-                        <img src="./utils/Images/switchCameraScreenSharing.png" alt="" id="mic_button_image">
+                        <img src="./utils/Images/switchCameraScreenSharing.png" alt="" id="mic_button_image"></img>
                     </button>
                     <button class="call_button_small" id="start_recording_button">
-                        <img src="./utils/Images/recordingStart.png" alt="" id="mic_button_image">
+                        <img src="./utils/Images/recordingStart.png" alt="" id="mic_button_image"></img>
                     </button>
                 </div>
-                <div id="finish_chat_button_container" class="finish_chat_button_container">
+
+                <div class='finish_chat_button_container display_none' id='finish_chat_button_container'>
                     <button class="call_button_large" id="finish_chat_call_button">
                         <img src="./utils/Images/hangUp.png" alt="" id="mic_button_image">
                     </button>
                 </div>
+
+
                 <div class="video_recording_buttons_container display_none" id="video_recording_buttons">
                     <button id="pause_recording_button">
                         <img src="./utils/Images/pause.png" alt="">
@@ -131,6 +135,57 @@
             </div>
         </div>
 
+        <!-- CALL CONTAINER DIV ERROR-->
+        <!-- <div class='call_container'>
+            <div class='videos_container'>
+                <div id='video_placeholder' class='videos_placeholder'>
+                    <img src='./utils/images/logo.png'></img>
+                </div>
+                <video class='remote_video display_none' autoplay id='remote_video'></video>
+                <div class='local_video_container'>
+                    <video class='local_video' id='local_video' muted autoplay></video>
+                </div>
+
+                <div class='call_buttons_container display_none' id='call_buttons'>
+                    <button class='call_button_small' id='mic_button'>
+                        <img src='./utils/images/mic.png' id='mic_button_image'></img>
+                    </button>
+                    <button class='call_button_small' id='camera_button'>
+                        <img src='./utils/images/camera.png' id='camera_button_image'></img>
+                    </button>
+                    <button class='call_button_large' id='hang_up_button'>
+                        <img src='./utils/images/hangUp.png'></img>
+                    </button>
+                    <button class='call_button_small' id='screen_sharing_button'>
+                        <img src='./utils/images/switchCameraScreenSharing.png'></img>
+                    </button>
+                    <button class='call_button_small' id='start_recording_button'>
+                        <img src='./utils/images/recordingStart.png'></img>
+                    </button>
+                </div>
+
+                <div class='finish_chat_button_container display_none' id='finish_chat_button_container'>
+                    <button class='call_button_large' id='finish_chat_call_button'>
+                        <img src='./utils/images/hangUp.png'></img>
+                    </button>
+                </div>
+
+                <div class='video_recording_buttons_container display_none' id='video_recording_buttons'>
+                    <button id='pause_recording_button'>
+                        <img src='./utils/images/pause.png'></img>
+                    </button>
+                    <button id='resume_recording_button' class='display_none'>
+                        <img src='./utils/images/resume.png'></img>
+                    </button>
+                    <button id='stop_recording_button'>
+                        Stop recording
+                    </button>
+                </div>
+            </div>
+        </div> -->
+
+
+        <!-- CALL CONTAINER DIV ERROR-->
 
         <!-- MESSENGER CONTAINER DIV -->
         <div class='messenger_container'>
