--- a/public/index.html
+++ b/public/index.html
@@ -202,6 +202,7 @@
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
+    <script type="module" src="./js/recordingUtils.js"></script>
     <script type="module" src="./js/elements.js"></script>
     <script type="module" src="./js/constant.js"></script>
     <script type="module" src="./js/ui.js"></script>
