stranger video call button background error

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
                     <button class="connecting_button" id="personal_code_chat_button">
                         <img src="./utils/Images/chatButton.png" class="connecting_buttons_image" alt="">
                     </button>
-                    <button class="connecting_button" id="personal_code_video_button">
+                    <button class="connecting_button display_none" id="personal_code_video_button">
                         <img src="./utils/Images/videoButton.png" class="connecting_buttons_image" alt="">
                     </button>
                 </div>
@@ -68,7 +68,7 @@
                     <button class="connecting_button" id="stranger_chat_button">
                         <img class="connecting_buttons_image" src="./utils/Images/chatButton.png" alt="">
                     </button>
-                    <button class="connecting_button" id="stranger_video_button">
+                    <button class="connecting_butto display_none" id="stranger_video_button">
                         <img class="connecting_buttons_image" src="./utils/Images/videoButton.png" alt="">
                     </button>
                 </div>
