all code done - implement functionality

--- a/public/index.html
+++ b/public/index.html
@@ -209,6 +209,7 @@
     <script type="module" src="./js/wss.js"></script>
     <script type="module" src="./js/store.js"></script>
     <script type="module" src="./js/webRTCHandler.js"></script>
+    <script type="module" src="./js/strangerUtils.js"></script>
     <script type="module" src="./js/main.js"></script>
 
 </body>
