video call button background - solved

--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
                     <button class="connecting_button" id="stranger_chat_button">
                         <img class="connecting_buttons_image" src="./utils/Images/chatButton.png" alt="">
                     </button>
-                    <button class="connecting_butto display_none" id="stranger_video_button">
+                    <button class="connecting_button display_none" id="stranger_video_button">
                         <img class="connecting_buttons_image" src="./utils/Images/videoButton.png" alt="">
                     </button>
                 </div>
